# ET-AI-Tools

./: Dockerfile  LICENSE  README.md  api.py  docker-compose.yml  draft.setup.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test-and-lint.yml
vm_ocr/: __init__.py  cluster.py  file_extensions_process.py  models.py  ocr.py  prompts.py  test.py
vm_ocr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
